# wpp

./: Cargo.toml  README.md
docs/: LICENSE-MIT
examples/: text.rs  triangle.rs
src/: effect.rs  frame.rs  lib.rs
src/fxaa/: fxaa_effect.rs  fxaa_effect_inner.rs  fxaa_frame.rs  mod.rs
src/fxaa/shader/: fxaa.wgsl
src/grayscale/: grayscale_effect.rs  grayscale_effect_inner.rs  grayscale_frame.rs  mod.rs
src/grayscale/shader/: grayscale.wgsl
